[tool.poetry]
name = "garden_learning"
version = "0.1.0"
description = ""
authors = ["LuanComputacao <eng.luanroger@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
dynaconf = "^3.1.2"
uvicorn = "^0.13.3"
fastapi = "^0.63.0"
autopep8 = "^1.5.5"
isort = "^5.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
